--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#fff</color>
+    <color name="primary">#0065BC</color>
+    <color name="dark">#00153E</color>
+    <color name="accent">#FDB010</color>
+    <color name="divider">#e2dfda</color>
+
 </resources>
