--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,5 @@
     <dimen name="list_item_image_width">40dp</dimen>
     <dimen name="list_subtitle_height">48dp</dimen>
     <dimen name="list_content_area_spacing">8dp</dimen>
-
+    <dimen name="product_detail_image_height">250dp</dimen>
 </resources>
