--- a/app/src/main/res/layout/product_detail_fragment.xml
+++ b/app/src/main/res/layout/product_detail_fragment.xml
@@ -1,65 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <import type="sumsar.com.walsmart.model.Product"></import>
+        <import type="android.text.Html"/>
+        <variable
+            name="product"
+            type="sumsar.com.walsmart.model.Product"></variable>
+    </data>
+
+    <RelativeLayout
+
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical">
 
 
         <ImageView
             android:id="@+id/product_detail_image"
             android:layout_width="match_parent"
             android:layout_height="@dimen/product_detail_image_height"
-            android:transitionName="@string/product_image_view"
+            android:transitionName='@{product.productImage}'
+            app:imageUrl="@{product.productImage}"
             tools:src="@drawable/walmart"/>
 
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/transparent"
+            />
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/transparent"
-        />
+        <TextView
+            android:id="@+id/product_detail_name"
+            style="@style/Base.TextAppearance.AppCompat.Title"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignBottom="@id/product_detail_image"
+            android:background="@drawable/product_image_gradient"
+            android:gravity="center"
+            android:text="@{product.productName}"
+            tools:text="cheese"/>
 
-    <TextView
-        android:id="@+id/product_detail_name"
-        style="@style/Base.TextAppearance.AppCompat.Title"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/product_image_gradient"
-        android:layout_alignBottom="@id/product_detail_image"
-        android:gravity="center"
-        tools:text="cheese"/>
+        <TextView
+            android:id="@+id/product_detail_rating_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/product_detail_image"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:gravity="bottom"
+            android:text="@string/rating"/>
 
-    <TextView
-        android:id="@+id/product_detail_rating_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/product_detail_image"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:gravity="bottom"
-        android:text="@string/rating"/>
+        <RatingBar
+            android:id="@+id/product_detail_rating_bar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/product_detail_rating_title"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_toRightOf="@id/product_detail_rating_title"
+            android:max="5"/>
 
-    <RatingBar
-        android:id="@+id/product_detail_rating_bar"
-        style="?android:attr/ratingBarStyleSmall"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/product_detail_rating_title"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_toRightOf="@id/product_detail_rating_title"
-        android:max="5"/>
+        <TextView
+            android:id="@+id/product_detail_long_description"
+            android:scrollbars="vertical"
+            android:layout_below="@id/product_detail_rating_bar"
+            android:layout_width="match_parent"
+            android:text="@{Html.fromHtml(product.longDescription)}"
+            android:layout_height="wrap_content"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/product_detail_rating_title"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"></LinearLayout>
-
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
