Added selectable state to list

--- a/app/src/main/res/layout-sw600dp-port/main_parallax.xml
+++ b/app/src/main/res/layout-sw600dp-port/main_parallax.xml
@@ -52,7 +52,7 @@
 
         <fragment
             android:id="@+id/product_list_fragment"
-            class="sumsar.com.walsmart.productlist.widget.ProductListFragment"
+            class="sumsar.com.walsmart.productlist.view.ProductListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
