--- a/app/src/main/res/layout-sw600dp-port/main.xml
+++ b/app/src/main/res/layout-sw600dp-port/main.xml
@@ -4,11 +4,8 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        />
+    <include layout="@layout/toolbar"></include>
+
 
     <fragment
         android:id="@+id/product_list_fragment"
