--- a/app/src/main/res/layout-sw600dp-w720dp/main.xml
+++ b/app/src/main/res/layout-sw600dp-w720dp/main.xml
@@ -9,11 +9,8 @@
     android:orientation="vertical"
     android:showDividers="middle">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        />
+    <include layout="@layout/toolbar"></include>
+
 
 
     <LinearLayout
