--- a/app/src/main/res/layout/product_detail_fragment_parallax.xml
+++ b/app/src/main/res/layout/product_detail_fragment_parallax.xml
@@ -7,10 +7,6 @@
 
     <data>
 
-        <import type="sumsar.com.walsmart.model.Product"></import>
-
-        <import type="android.text.Html"/>
-
         <variable
             name="product"
             type="sumsar.com.walsmart.model.Product"></variable>
@@ -51,13 +47,8 @@
                     app:layout_collapseMode="parallax"
                     tools:src="@drawable/walmart"/>
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@color/transparent"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+                <include layout="@layout/toolbar"></include>
+
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -74,7 +65,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
-                android:orientation="vertical"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
@@ -144,7 +134,7 @@
                     android:layout_height="match_parent"
                     android:layout_below="@id/product_detail_rating"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:text="@{Html.fromHtml(product.longDescription)}"/>
+                    app:fromHtml="@{product.longDescription}"/>
 
             </RelativeLayout>
         </android.support.v4.widget.NestedScrollView>
