--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -22,8 +22,8 @@
         android:layout_height="@dimen/list_item_height_two_lines"
         android:orientation="vertical"
         android:background="@drawable/item_selector"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/list_margin"
+        android:paddingRight="@dimen/list_margin"
         app:selected="@{selectedProductId.productId == product.productId}">
 
 
