--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="list_item_image_section_width">56dp</dimen>
     <dimen name="list_content_area_spacing">8dp</dimen>
     <dimen name="product_detail_image_height">250dp</dimen>
+    <dimen name="list_margin">16dp</dimen>
+
 </resources>
