--- a/app/src/main/res/layout/product_detail_fragment_parallax.xml
+++ b/app/src/main/res/layout/product_detail_fragment_parallax.xml
@@ -16,6 +16,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         >
 
         <android.support.design.widget.AppBarLayout
@@ -31,7 +32,7 @@
                 android:fitsSystemWindows="true"
                 android:title="@{product.productName}"
                 app:contentScrim="?attr/colorPrimary"
-                app:expandedTitleMarginEnd="64dp"
+                app:expandedTitleMarginEnd="24dp"
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -47,7 +48,8 @@
                     app:layout_collapseMode="parallax"
                     tools:src="@drawable/walmart"/>
 
-                <include layout="@layout/toolbar"></include>
+                <include
+                    layout="@layout/toolbar"></include>
 
 
             </android.support.design.widget.CollapsingToolbarLayout>
@@ -65,10 +67,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
+                android:orientation="vertical"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin">
+                android:paddingTop="24dp">
 
 
                 <TextView
@@ -76,8 +79,8 @@
                     style="@style/Base.TextAppearance.AppCompat.Title"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
-                    android:gravity="center"
                     android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:gravity="center"
                     android:text="@{product.productName}"
                     tools:text="cheese"/>
 
@@ -97,9 +100,9 @@
                     android:id="@+id/product_detail_review_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/product_detail_rating"
                     android:layout_alignBottom="@id/product_detail_rating"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_toRightOf="@id/product_detail_rating"
                     android:drawableLeft="@android:drawable/ic_menu_view"
                     android:gravity="center"
                     android:text="@{String.valueOf(product.reviewCount)}"
@@ -109,10 +112,10 @@
                     android:id="@+id/product_detail_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/product_detail_review_count"
                     android:layout_alignBottom="@id/product_detail_review_count"
-                    android:drawableLeft="@android:drawable/ic_menu_add"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_toRightOf="@id/product_detail_review_count"
+                    android:drawableLeft="@android:drawable/ic_menu_add"
                     android:gravity="center"
                     android:text="@{product.price}"
                     tools:text="$100"/>
@@ -120,10 +123,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/product_detail_price"
                     android:layout_alignBottom="@id/product_detail_review_count"
-                    android:gravity="center"
+                    android:layout_toRightOf="@id/product_detail_price"
                     android:drawableLeft="@android:drawable/ic_menu_send"
+                    android:gravity="center"
                     android:text="@{product.inStock ? @string/in_stock: @string/not_in_stock}"
                     android:textColor="@{product.inStock ? @color/in_stock: @color/not_in_stock}"
                     tools:text="yes"/>
