--- a/app/src/main/res/layout/product_detail_fragment_parallax.xml
+++ b/app/src/main/res/layout/product_detail_fragment_parallax.xml
@@ -48,10 +48,20 @@
                     app:layout_collapseMode="parallax"
                     tools:src="@drawable/walmart"/>
 
-                <include
-                    layout="@layout/toolbar"></include>
 
-
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@color/transparent"
+                    android:elevation="2dp"
+                    android:titleTextColor="@color/white"
+                    app:layout_collapseMode="pin"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:titleTextColor="@color/white"/>
             </android.support.design.widget.CollapsingToolbarLayout>
 
         </android.support.design.widget.AppBarLayout>
