--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/dark</item>
-        <item name="colorAccent">@color/accent</item>
+    <style name="AppTheme" parent="BaseTheme">
         <item name="android:windowContentTransitions">true</item>
     </style>
 </resources>
