--- a/app/src/main/res/layout-sw600dp-w720dp/main.xml
+++ b/app/src/main/res/layout-sw600dp-w720dp/main.xml
@@ -12,7 +12,6 @@
     <include layout="@layout/toolbar"></include>
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,6 +22,12 @@
             class="sumsar.com.walsmart.productlist.view.ProductListFragment"
             android:layout_width="400dp"
             android:layout_height="match_parent"/>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/divider"/>
+
 
         <fragment
             android:id="@+id/product_details_fragment"
