--- a/app/src/main/res/layout/details_activity.xml
+++ b/app/src/main/res/layout/details_activity.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-    <fragment
-        android:id="@+id/product_details_fragment"
-        class="sumsar.com.walsmart.productdetail.view.ProductDetailParallaxFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</FrameLayout>
+<fragment android:id="@+id/product_details_fragment"
+          class="sumsar.com.walsmart.productdetail.view.ProductDetailParallaxFragment"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"/>
