--- a/app/src/main/res/layout/product_detail_fragment.xml
+++ b/app/src/main/res/layout/product_detail_fragment.xml
@@ -21,7 +21,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -42,7 +42,7 @@
                 android:id="@+id/product_detail_name"
                 style="@style/Base.TextAppearance.AppCompat.Title"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="0dp"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -53,7 +53,6 @@
                 android:id="@+id/product_details_info_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/product_detail_name"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -106,7 +105,6 @@
                 android:id="@+id/product_detail_long_description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/product_detail_rating"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 app:fromHtml="@{product.longDescription}"/>
         </LinearLayout>
