--- a/app/src/main/res/layout/product_detail_fragment.xml
+++ b/app/src/main/res/layout/product_detail_fragment.xml
@@ -50,6 +50,7 @@
                 android:text="@{product.productName}"
                 tools:text="cheese"/>
 
+            <!--Should be reused as an 'include' but data binding fails-->
             <LinearLayout
                 android:id="@+id/product_details_info_layout"
                 android:layout_width="match_parent"
